Fix map alignment

--- a/_sass/sections/_locations.scss
+++ b/_sass/sections/_locations.scss
@@ -33,6 +33,8 @@
   }
 
 .map--location {
+  vertical-align: top;
+
   &::before {
     content: '';
     display: block;
